--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,22 +4,24 @@ version: 1.1.3
 homepage: https://github.com/matiniiuu/daily_pedometer2
 
 environment:
-    sdk: '>=2.17.0 <4.0.0'
-    flutter: '>=3.0.0'
+  sdk: ">=2.17.0 <4.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
-    flutter:
-        sdk: flutter
+  flutter:
+    sdk: flutter
+  hive: ^2.2.3
+  intl: ^0.19.0
 
 dev_dependencies:
-    flutter_test:
-        sdk: flutter
+  flutter_test:
+    sdk: flutter
 
 flutter:
-    plugin:
-        platforms:
-            android:
-                package: com.example.daily_pedometer2
-                pluginClass: DailyPedometer2Plugin
-            ios:
-                pluginClass: DailyPedometer2Plugin
+  plugin:
+    platforms:
+      android:
+        package: com.example.daily_pedometer2
+        pluginClass: DailyPedometer2Plugin
+      ios:
+        pluginClass: DailyPedometer2Plugin
